--- a/appointment.html
+++ b/appointment.html
@@ -8,6 +8,208 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="./telthcare.css">
+    <style>
+        .sidebar-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 50px;
+        }
+
+        .sidebar-header .logo {
+            width: 40px;
+            height: 40px;
+            background: #623193;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-weight: bold;
+            margin-right: 10px;
+        }
+
+        .sidebar-header .title {
+            font-size: 20px;
+            font-weight: 600;
+            transition: opacity 0.3s;
+        }
+
+        .sidebar.collapsed .title {
+            display: none;
+        }
+
+        .nav-link {
+       display: flex;
+       align-items: center;
+       padding: 12px 15px;
+       color: black;
+       border-radius: 8px;
+       margin-bottom: 15px;
+       transition: all 0.3s;
+       position: relative;
+       gap: 6px;
+   }
+
+   .nav-link:hover {
+       background-color: #623193;
+       color: white;
+   }
+
+   .nav-link.active {
+       background-color: #623193;
+       color: white;
+   }
+
+   .nav-link i {
+       font-size: 20px;
+       min-width: 20px;
+   }
+
+   .nav-link span {
+       transition: opacity 0.3s;
+   }
+
+   .sidebar.collapsed .nav-link span,
+   .sidebar.collapsed .nav-link:hover::after {
+       display: none;
+   }
+
+   .sidebar.collapsed .nav-link:hover::before {
+       content: attr(data-title);
+       position: absolute;
+       left: 100%;
+       top: 50%;
+       transform: translateY(-50%);
+       background-color: #623193;
+       color: white;
+       padding: 5px 10px;
+       border-radius: 8px;
+       white-space: nowrap;
+       box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+       z-index: 1000;
+   }
+
+   .bi-list-task {
+       color: #623193;
+       border: none;
+       border-radius: 8px;
+       padding: 10px 20px;
+       cursor: pointer;
+       margin-bottom: 20px;
+       font-size: 30px;
+   }
+
+   @media (max-width: 1000px) {
+       .listIcon {
+           display: none;
+       }
+
+       .sidebar {
+           width: 80px;
+       }
+
+       .title {
+           display: none;
+       }
+
+       .nav-link span {
+           display: none;
+       }
+
+       .sidebar .sidebar-footer {
+           display: none;
+       }
+
+       .nav-link:hover::before {
+           content: attr(data-title);
+           position: absolute;
+           left: 100%;
+           top: 50%;
+           transform: translateY(-50%);
+           background-color: #623193;
+           color: white;
+           padding: 5px 10px;
+           border-radius: 8px;
+           white-space: nowrap;
+           box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+           z-index: 1000;
+       }
+   }
+   .sidebar {
+       width: 18%;
+       height: 100vh;
+       position: fixed;
+       left: 0;
+       top: 0;
+       padding: 20px;
+       background: white;
+       transition: all 0.3s ease;
+       box-shadow: 5px 15px 15px rgba(0, 0, 0, 0.1);
+   }
+
+   .sidebar.collapsed {
+       width: 80px;
+   }
+
+   .main-content {
+       flex-grow: 1;
+       margin-left: 18%;
+       padding: 20px;
+       background-color: #f8f9fa;
+       min-height: 100vh;
+       transition: margin-left 0.3s ease;
+   }
+
+   .sidebar.collapsed+.main-content {
+       margin-left: 80px;
+   }
+
+   @media (max-width: 1000px) {
+       .sidebar {
+           width: 80px;
+       }
+
+       .main-content {
+           margin-left: 80px;
+       }
+
+       .sidebar.collapsed+.main-content {
+           margin-left: 80px;
+       }
+   }
+
+   html.sidebar-collapsed .sidebar {
+       width: 80px;
+   }
+
+   html.sidebar-collapsed .main-content {
+       margin-left: 80px;
+   }
+
+   .sidebar-footer {
+       position: absolute;
+       bottom: 20px;
+       left: 0;
+       right: 0;
+       display: flex;
+       justify-content: center;
+   }
+
+   .toggle-icon {
+       color: #623193;
+       font-size: 24px;
+       cursor: pointer;
+   }
+
+   .sidebar:not(.collapsed) .bi-chevron-right,
+   .sidebar.collapsed .bi-chevron-left {
+       display: none;
+   }
+
+   .sidebar.collapsed .bi-chevron-right {
+       display: block;
+   }
+    </style>
 </head>
 
 <body>
@@ -16,9 +218,6 @@
             <div class="sidebar-header">
                 <div class="logo">TZ</div>
                 <span class="title">Sidebar</span>
-            </div>
-            <div class="listIcon">
-                <i class="bi bi-list-task d-flex justify-content-end m-3" id="toggleButton"></i>
             </div>
 
             <nav class="nav flex-column">
@@ -43,6 +242,11 @@
                     <span>Care Plan</span>
                 </a>
             </nav>
+
+            <div class="sidebar-footer">
+                <i class="bi bi-chevron-left toggle-icon" id="toggleButtonLeft"></i>
+                <i class="bi bi-chevron-right toggle-icon" id="toggleButtonRight"></i>
+            </div>
         </div>
         <div class="main-content">
             <div class="content-area">
